# swagger-output.json
@@ -16,12 +16,13 @@
         "tags": [
           "posts"
         ],
-        "description": "取得依分頁取得貼文",
+        "summary": "取得多筆貼文 - 分頁",
+        "description": "",
         "parameters": [
           {
-            "name": "page",
+            "name": "sort",
             "in": "query",
-            "description": "分頁數",
+            "description": "排序 ( asc || desc ) ",
             "type": "string"
           },
           {
@@ -31,23 +32,17 @@
             "type": "string"
           },
           {
-            "name": "sort",
+            "name": "page",
             "in": "query",
-            "description": "排序 ( arc || desc ) ",
-            "type": "string"
-          },
-          {
-            "name": "like",
-            "in": "query",
-            "description": "user id 查看我按讚的文章",
+            "description": "分頁數",
             "type": "string"
           }
         ],
         "responses": {
           "200": {
-            "description": "取得分頁資料",
+            "description": "OK",
             "schema": {
-              "$ref": "#/definitions/PostPage"
+              "$ref": "#/definitions/PostPagination"
             }
           }
         }
@@ -70,33 +65,27 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "新增成功",
+          "201": {
+            "description": "Created",
             "schema": {
-              "$ref": "#/definitions/Post"
+              "$ref": "#/definitions/PostCreated"
             }
           }
         }
       },
       "delete": {
-        "tags": [
-          "posts"
-        ],
-        "description": "刪除全部貼文",
+        "description": "",
         "parameters": [],
         "responses": {
           "200": {
-            "description": "刪除成功"
+            "description": "OK"
           }
         }
       }
     },
     "/api/posts/{id}": {
       "get": {
-        "tags": [
-          "posts"
-        ],
-        "description": "取得指定 ID 貼文",
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -107,60 +96,12 @@
         ],
         "responses": {
           "200": {
-            "description": "取得單筆資料",
-            "schema": {
-              "$ref": "#/definitions/Post"
-            }
+            "description": "OK"
           }
         }
       },
       "patch": {
-        "tags": [
-          "posts"
-        ],
-        "description": "更新貼文",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "description": "貼文 Id"
-          },
-          {
-            "name": "obj",
-            "in": "body",
-            "description": "貼文資料",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/PostBody"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "更新成功",
-            "schema": {
-              "$ref": "#/definitions/Post"
-            }
-          },
-          "404": {
-            "schema": {
-              "type": "string",
-              "example": "查無貼文",
-              "xml": {
-                "name": "main"
-              }
-            },
-            "description": "更新失敗"
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "posts"
-        ],
-        "description": "刪除指定 ID 貼文",
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -171,47 +112,29 @@
         ],
         "responses": {
           "200": {
-            "description": "刪除成功"
-          },
-          "404": {
-            "schema": {
-              "type": "string",
-              "example": "查無貼文",
-              "xml": {
-                "name": "main"
-              }
-            },
-            "description": "刪除失敗"
+            "description": "OK"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           }
         }
       }
     }
   },
   "definitions": {
-    "Post": {
-      "type": "object",
-      "properties": {
-        "_id": {
-          "type": "string",
-          "example": "6274caa22a6bd4d1ecd8af05"
-        },
-        "content": {
-          "type": "string",
-          "example": "貼文內容"
-        },
-        "likes": {
-          "type": "number",
-          "example": 0
-        },
-        "image": {
-          "type": "string",
-          "example": "https://unsplash.com/photos/gKXKBY-C-Dk"
-        }
-      },
-      "required": [
-        "content"
-      ]
-    },
     "PostBody": {
       "type": "object",
       "properties": {
@@ -232,6 +155,102 @@
         "content",
         "user"
       ]
+    },
+    "PostCreated": {
+      "type": "object",
+      "properties": {
+        "content": {
+          "type": "string",
+          "example": "123"
+        },
+        "image": {
+          "type": "string",
+          "example": ""
+        },
+        "likes": {
+          "type": "number",
+          "example": 0
+        },
+        "user": {
+          "type": "string",
+          "example": "628e32cb7e25476fec99ff8d"
+        },
+        "_id": {
+          "type": "string",
+          "example": "628e36fb3bb323334a0a82c9"
+        },
+        "createdAt": {
+          "type": "string",
+          "example": "2022-05-25T14:02:35.950Z"
+        }
+      }
+    },
+    "PostPagination": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "_id": {
+                "type": "string",
+                "example": "628e34707a9f563b8484def7"
+              },
+              "content": {
+                "type": "string",
+                "example": "123"
+              },
+              "image": {
+                "type": "string",
+                "example": ""
+              },
+              "likes": {
+                "type": "number",
+                "example": 0
+              },
+              "user": {
+                "type": "object",
+                "properties": {
+                  "_id": {
+                    "type": "string",
+                    "example": "628e32cb7e25476fec99ff8d"
+                  },
+                  "name": {
+                    "type": "string",
+                    "example": "洧杰"
+                  },
+                  "photo": {
+                    "type": "string",
+                    "example": ""
+                  }
+                }
+              }
+            }
+          }
+        },
+        "paging": {
+          "type": "object",
+          "properties": {
+            "currentPage": {
+              "type": "number",
+              "example": 1
+            },
+            "totalPage": {
+              "type": "number",
+              "example": 1
+            },
+            "hasPre": {
+              "type": "boolean",
+              "example": false
+            },
+            "hasNext": {
+              "type": "boolean",
+              "example": false
+            }
+          }
+        }
+      }
     }
   }
 }
